# basestation_gui_python

./: .gitignore  CMakeLists.txt  README.md  ji_pose.csv  package.xml  plugin.xml  setup.py
config/: calib.txt  gui_params.yaml  setup.yaml  subt_test_gui.perspective
custom_logs/: .~lock.log_03-15-19-15-32-31.csv#  .~lock.log_03-15-19-17-30-44.csv#
devel/: _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
generate_rosserial_libraries/: make_libraries.py
launch/: gui.launch
msg/: Artifact.msg  ArtifactDisplayImage.msg  ArtifactSubmissionReply.msg  ArtifactUpdate.msg  ArtifactVisualizerUpdate.msg  DarpaStatus.msg  FakeWifiDetection.msg  GuiMessage.msg  GuiRobCommand.msg  NineHundredRadioMsg.msg  RadioMsg.msg  RetreiveArtifactImage.msg  StatusPanelUpdate.msg
resources/: calibration.ui  refine_artifact.ui  robot_command.ui
scripts/: application.py  command_gui.py  estop_to_serial.py  gui.py  gui_simple_estop.py  gui_to_ros.py  main.py  rqt_basestation_gui  serial_to_estop.py
src/: ArtifactHandler.py  ArtifactImageVisualizerPlugin.py  ArtifactManipulationPlugin.py  ArtifactQueuePlugin.py  ArtifactSubmissionPlugin.py  CoordinationPlugin.py  CustomInteractiveMarker.py  GlobalButtonsPlugin.py  Gui.py  GuiBridges.py  GuiEngine.py  InfoPlugin.py  MessagePlugin.py  PluginSkeleton.py  RobotCommandPlugin.py  RobotStatusPlugin.py  RosGuiBridge.py  basic_controls.py  calibration.py  darpaStatusMonitor.py  fake_artifact_detections.py  fake_interactive_marker.py  gui_params.yaml  gui_utils.py  interactiveMarkerProcessing.py  point_to_line_dist.py  robots.py  (+1 more)
(+15 files in other folders)
